--- a/style.css
+++ b/style.css
@@ -34,10 +34,13 @@ a {
 }
 .pic {
   background: url("./my_pic.png") no-repeat;
-  width: 180px;
-  height: 150px;
-  margin: 20px;
+  width: 140px;
+  height: 140px;
+  margin: 30px;
+  border-radius: 500px;
+  margin-bottom: 24px;
 }
+
 .title-holder {
   align-items: center;
 }
